Fixed spacing between nav items, no longer flex

--- a/style.css
+++ b/style.css
@@ -56,15 +56,12 @@ header {
 
 .nav {
     min-width: 100%;
-    display: table;
-    margin: 0 auto;
 }
 
 .nav__list {
     list-style: none;
     padding: 0;
-    display: flex;
-    justify-content: space-evenly;
+    min-width: 100%;
 }
 
 .nav-toggle {
@@ -108,7 +105,6 @@ h3 {
 /* Makes nav links horizontal */
 .nav__item {
     display: inline-block;
-    position: relative;
-    right: var(--fs-h2);
+    margin-left: var(--fs-h1);
 }
 
